<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_assignment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/assignment_name"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_assignment_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_assignment"
        android:layout_marginTop="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/assignment_description"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner_day_assignment"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_assignment_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:prompt="@string/select_day" />

    <Spinner
        android:id="@+id/spinner_month_assignment"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_assignment_description"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:prompt="@string/select_month" />

    <Button
        android:id="@+id/button_save_assignment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel" />



</RelativeLayout>